kustomize/image-factory/install/registry/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry
  namespace: image-factory
spec:
  replicas: ${registry_replicas:-1}
  selector:
    matchLabels:
      app.kubernetes.io/name: registry
  template:
    metadata:
      labels:
        app.kubernetes.io/name: registry
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: registry
          # renovate: datasource=docker depName=distribution package=ghcr.io/distribution/distribution
          image: ghcr.io/distribution/distribution:3.0.0@sha256:4ba3adf47f5c866e9a29288c758c5328ef03396cb8f5f6454463655fa8bc83e2
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          ports:
            - name: http
              containerPort: 5000
          volumeMounts:
            - name: tmp
              mountPath: /tmp
            - name: data
              mountPath: /var/lib/registry
          readinessProbe:
            httpGet:
              path: /v2/
              port: http
          livenessProbe:
            httpGet:
              path: /v2/
              port: http
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
      volumes:
        - name: tmp
          emptyDir: {}
        - name: data
          emptyDir: {}
