kustomize/image-factory/install/registry/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry
  namespace: image-factory
spec:
  selector:
    app.kubernetes.io/name: registry
  ports:
    - name: http
      port: 5000
      targetPort: http
